--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:backend": "ts-node-dev --project tsconfig.backend.json --respawn --transpile-only src/backend/server.ts",
     "build": "tsc -p tsconfig.backend.json && vite build",
     "start": "cross-env NODE_ENV=production node dist/backend/server.js",
+    "start-container": "node dist/backend/server.js",
     "yeet": "node node_modules/code-context-yeeter/yeetCode.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -21,7 +22,7 @@
     "nodejs"
   ],
   "author": "",
-  "license": "GPL-3.0",
+  "license": "ISC",
   "dependencies": {
     "code-context-yeeter": "github:JoshKoiro/code-context-yeeter",
     "cors": "^2.8.5",
