--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "code-context-yeeter": "github:JoshKoiro/code-context-yeeter",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "html2pdf.js": "^0.10.3",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.14.0",
+    "qr-code-styling": "^1.9.1",
     "qrcode": "^1.5.4",
     "react-router-dom": "^7.4.1",
     "sqlite3": "^5.1.7"
