--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jspdf": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.14.0",
+    "puppeteer": "^24.6.0",
     "qr-code-styling": "^1.9.1",
     "qrcode": "^1.5.4",
     "react-router-dom": "^7.4.1",
