--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
     "dev:backend": "ts-node-dev --project tsconfig.backend.json --respawn --transpile-only src/backend/server.ts",
-    "build": "tsc -p tsconfig.backend.json && vite build",
+    "build": "tsc -p tsconfig.backend.json && vite build && npm run copy-css && node verify-build.js",
+    "copy-css": "mkdir -p dist/public/assets && cp src/frontend/components/QRCodeLabelPreview.css dist/public/assets/",
     "start": "cross-env NODE_ENV=production node dist/backend/server.js",
     "start-container": "node dist/backend/server.js",
     "yeet": "node node_modules/code-context-yeeter/yeetCode.js",
